# rotini

./: .gitignore  CONTRIBUTING.md  README.md  Taskfile.backend.yml  Taskfile.frontend.yml  Taskfile.yml  backend-test.env  renovate.json5
.github/: pull_request_template.md
.github/workflows/: backend-pipeline.yml  ci.yml  frontend-pipeline.yml
.github/workflows/setup-backend-environment/: action.yml
.github/workflows/setup-frontend-environment/: action.yml
.github/workflows/setup-python/: action.yml
backend/: .pylintrc  Dockerfile  Dockerfile-django  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
backend/docs/research/: users.md
backend/rotini/: conftest.py  db.py  main.py  manage.py  settings.py
backend/rotini/api/: files.py  users.py
backend/rotini/auth/: base.py  decorators.py  jwt.py  jwt_test.py  middleware.py  middleware_test.py  routes.py  urls.py  use_cases.py  view_test.py  views.py
backend/rotini/base/: settings.py  urls.py  wsgi.py
backend/rotini/base/env_settings/: test.py
backend/rotini/envs/: ci.py  migrate.py  test.py
backend/rotini/files/: base.py  models.py  routes.py  serializers.py  urls.py  use_cases.py  views.py  views_test.py
backend/rotini/files/migrations/: 0001_initial.py  0002_file_owner.py
backend/rotini/identity/: authentication_classes.py  authentication_classes_test.py  jwt.py  jwt_test.py  middleware.py  middleware_test.py  models.py  serializers.py  token_management.py  token_management_test.py  urls.py  view_test.py  views.py  views_test.py
backend/rotini/identity/migrations/: 0001_initial.py
backend/rotini/migrations/: migrate.py  migration_0_initial.py  migration_1_user_table.py  migration_2_permissions.py  test.py
backend/rotini/permissions/: base.py  files.py
backend/rotini/use_cases/: exceptions.py  files.py  users.py
backend/rotini_django/: conftest.py  db.sqlite3
backend/rotini_django/auth/: jwt.py  middleware_test.py  urls.py
backend/rotini_django/base/: asgi.py  settings.py  urls.py
backend/rotini_django/base/env_settings/: test.py
backend/rotini_django/files/migrations/: 0001_initial.py
backend/script/: bootstrap  build.sh  format.sh  provision-db  requirements-lock  start.sh  test  test.sh
backend/tests/: conftest.py  test_api_files.py  test_auth_routes.py  test_files_routes.py
frontend/: biome.json  jest.config.js  package.json  rome.json  tsconfig.json  vite.config.js
frontend/script/: bootstrap
frontend/src/: App.tsx  authRefresh.test.ts  authRefresh.ts  axios.ts  index.html  index.tsx  utils.ts
frontend/src/components/: FileDetails.tsx  FileList.tsx  NavigationBar.tsx
frontend/src/contexts/: AsyncTaskContext.tsx  LocationContext.tsx
frontend/src/hooks/: files.ts
frontend/tests/: FileDetails.test.tsx  FileList.test.tsx  NavigationBar.test.tsx  helpers.tsx  testSetup.ts
script/: bootstrap  pre-commit
(+32 files in other folders)
