[project]
name = "rotini"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
   "fastapi",
   "uvicorn[standard]",
   "python-multipart",
   "typing_extensions",
   "pydantic",
   "pyjwt",
   "argon2-cffi",
   "psycopg2",
   "django",
   "djangorestframework",
]

[project.optional-dependencies]
dev = [
    "anyio",
    "black",
    "pylint",
    "pylint_django",
    "pytest",
    "httpx",
]

[tool.setuptools]
packages = ["rotini"]

[tool.pytest.ini_options]
pythonpath=[
    ".",
    "./rotini",
]

[tool.pylint.'MASTER']
load-plugins="pylint_django"

